--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,60 @@
-plugins {
-    id 'java'
+ext {
+    libraries = [
+            vertx                     : "3.7.0",
+
+            rxjava                    : "2.2.8",
+
+            kotlinx_coroutines        : "1.2.0",
+
+            disruptor                 : "3.4.2",
+
+            httpclient                : "4.5.2",
+
+            okhttp                    : "3.11.0",
+
+            lettuce                   : "5.1.3.RELEASE",
+
+            htmlunit                  : "2.31",
+
+            selenium_java             : "3.14.0",
+
+            phantomjsdriver           : "1.4.4",
+
+            commons_pool2             : "2.6.0",
+
+            lombok                    : "1.18.0",
+
+            logback                   : "1.2.3",
+
+            proxypool                 : "1.1.13",
+
+            tony_common_utils         : "1.2.8"
+    ]
 }
+
+apply plugin: 'java'
 
 group 'com.netdiscovery'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
 
+def libs = rootProject.ext.libraries // 库
+
 repositories {
+    jcenter()
     mavenCentral()
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    implementation 'io.netty:netty-all:4.1.17.Final'
+    implementation "ch.qos.logback:logback-classic:${libs.logback}"
+    implementation "ch.qos.logback:logback-core:${libs.logback}"
+    implementation "ch.qos.logback:logback-access:${libs.logback}"
+    implementation "org.projectlombok:lombok:${libs.lombok}"
+    implementation "tony-common:tony-common-utils:${libs.tony_common_utils}"
+    implementation 'org.springframework:spring-context:5.1.8.RELEASE'
+
 }
