--- a/build.gradle
+++ b/build.gradle
@@ -56,5 +56,5 @@ dependencies {
     implementation "org.projectlombok:lombok:${libs.lombok}"
     implementation "tony-common:tony-common-utils:${libs.tony_common_utils}"
     implementation 'org.springframework:spring-context:5.1.8.RELEASE'
-
+    implementation 'org.apache.zookeeper:zookeeper:3.4.14'
 }
